<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>vo</groupId>
	<artifactId>zframework_core</artifactId>
	<version>1.0.0-SNAPSHOT-jdk21</version>
	<name>zframework_core</name>
	<description>zframework_core</description>

	<properties>
		<java.version>21</java.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>vo</groupId>
			<artifactId>log</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>27.1-jre</version>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>

		<!-- 原生zstd支持 -->
		<!--		<dependency>-->
		<!--			<groupId>io.airlift</groupId>-->
		<!--			<artifactId>aircompressor</artifactId>-->
		<!--			<version>0.21</version>-->
		<!--		</dependency>-->

		<dependency>
			<groupId>com.aayushatharva.brotli4j</groupId>
			<artifactId>brotli4j</artifactId>
			<version>1.23.0</version>
		</dependency>

		<dependency>
			<groupId>com.aayushatharva.brotli4j</groupId>
			<artifactId>native-linux-x86_64</artifactId>
			<version>1.23.0</version>
		</dependency>

		<!-- jni zstd支持 -->
		<dependency>
			<groupId>com.github.luben</groupId>
			<artifactId>zstd-jni</artifactId>
			<version>1.5.5-11</version>
		</dependency>

		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>4.4.3</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.janino</groupId>
			<artifactId>janino</artifactId>
			<version>3.1.9</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.2</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-runtime -->
		<dependency>
			<groupId>io.protostuff</groupId>
			<artifactId>protostuff-runtime</artifactId>
			<version>1.7.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-core -->
		<dependency>
			<groupId>io.protostuff</groupId>
			<artifactId>protostuff-core</artifactId>
			<version>1.7.1</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<fork>false</fork>
				</configuration>
			</plugin>
		</plugins>
	</build>


</project>
